# hpfft

./: .gitignore  .gitmodules  Bench_3D_R2C_CPU.c  CMakeLists.txt  README.md  test3D_CPU_C2C.c  test3D_CPU_R2C.c
.github/CI/: spack.yaml  spack_setup.sh
.github/workflows/: build.sh  build_spack.sh  main.yml  spack.yaml
benchmarks/: Bench_3D_C2C_CPU.c  Bench_3D_R2C_CPU.c  CMakeLists.txt  fiber_swfft.cpp  hpfft_swfft.cpp  test3D_C2C.c  test3D_CPU_C2C.c  test3D_CPU_R2C.c  test3D_GPU_C2C.c  test3D_GPU_R2C.c
cmake/: print_summary.cmake
include/: fiber_backend_accfft.h  fiber_backend_decomp2d.h  fiber_backend_fftadvmpi.h  fiber_backend_ffte.h  fiber_backend_fftmpi.h  fiber_backend_fftw.h  fiber_backend_fftwpp.h  fiber_backend_heffte.h  fiber_backend_nb3dfft.h  fiber_backend_p3dfft.h  fiber_backend_swfft.h  fiber_backends.h  fiber_fortran.h  fiber_swfft.h  fiber_utils.h  hpfft_backend_accfft.h  hpfft_backend_decomp2d.h  hpfft_backend_fftadvmpi.h  hpfft_backend_ffte.h  hpfft_backend_fftmpi.h  hpfft_backend_fftw.h  hpfft_backend_fftwpp.h  hpfft_backend_heffte.h  hpfft_backends.h  hpfft_swfft.h
spack/: README  modules.yaml  packages.yaml  repo.yaml  upstreams.yaml
